--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
 }
+body { position: fixed; overflow-y:scroll }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
